# CppBedrock

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: config.chainedhotstuff.yaml  config.entities.byzantine.yaml  config.entities.yaml  config.hotstuff.yaml  config.hotstuff2.yaml  config.linearpbft.yaml  config.pbft.yaml  config.sbft.yaml  config.zyzzyva.yaml
include/coordination/: CoordinationServer.h  CoordinationUnit.h  Coordinator.h
include/coordination/connections/: IConnection.h  TcpConnection.h
include/coordination/grpc/: GrpcServer.h  NodeServiceImpl.h
include/core/: Entity.h  TimeKeeper.h
include/core/crypto/: CryptoProvider.h  CryptoUtils.h  OpenSSLCryptoProvider.h
include/core/events/: BaseEvent.h  Event.h  EventFactory.h  EventHandler.h  Message.h  MessageHandler.h  ProtoMessage.h
include/core/pipeline/: Pipeline.h
include/core/state/: DataSet.h  EntityState.h  StateMachine.h
include/utils/: Benchmark.h
keys/: gen_server_keys.sh
proto/: bedrock.proto
scripts/: automate_test.sh  clean_json.sh
src/: coordination_system  main.cpp
src/coordination/: CoordinationServer.cpp  CoordinationUnit.cpp
src/coordination/connections/: TcpConnection.cpp
src/coordination/grpc/: GrpcServer.cpp  NodeServiceImpl.cpp
src/core/: Entity.cpp  TimeKeeper.cpp
src/core/crypto/: CryptoUtils.cpp  OpenSSLCryptoProvider.cpp
src/core/events/: EventFactory.cpp  EventFactoryProtocolSpecific.cpp
src/core/state/: DataSet.cpp  EntityState.cpp  StateMachine.cpp
src/examples/: NodeServiceImpl.cpp  NodeServiceImpl.h  grpc_node_main.cpp  grpc_ping_client.cpp
src/utils/: Benchmark.cpp
tests/: CMakeLists.txt  integration_test.cpp
